--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,20 @@
 {
+    "version": 2,
+    "name": "todo-app",
     "builds": [
-    {
-    "src": "./app.js",
-    "use": "@vercel/node"
-    }
+      {
+        "src": "app.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "client/package.json",
+        "use": "@vercel/static-build",
+        "config": { "distDir": "client/build" }
+      }
     ],
     "routes": [
-    {
-    "src": "/.*",
-    "dest": "app.js"
-    }
+      { "src": "/api/(.*)", "dest": "/app.js" },
+      { "src": "/(.*)", "dest": "/client/$1" }
     ]
-    }
+  }
+  
