--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,14 @@
 {
-    "version": 2,
-    "name": "todo-app",
     "builds": [
       {
         "src": "./app.js",
         "use": "@vercel/node"
-      },
-      {
-        "src": "client/package.json",
-        "use": "@vercel/static-build",
-        "config": { "distDir": "client/build" }
       }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/app.js" },
-      { "src": "/(.*)", "dest": "/client/$1" }
+      {
+        "src": "/.*",
+        "dest": "app.js"
+      }
     ]
   }
-  
